syntax = "proto3";

option java_package = "com.example.hellocompose.data.login.localDataSource";
option java_multiple_files = true;

message ProtoUser {
  string id = 1;
  //  string query = 1;
  string name = 2;
  string phoneNumber = 3;
  string   firstName = 4;
  string lastName = 5;
  string    middleName = 6;
  string email = 7;
  string    birthday = 8;
  int32 regChannel = 9;
  int32   sex = 10;
  //  cards

  repeated ProtoCards cards = 11;

  //  Filter filter = 2;
}

message ProtoCards{
  int32 cardId = 1;
  int32 cardType = 2;
}
